===v4.3.0===
 * New icon type: Diminishing Returns. Guess what this one tracks?
 * The suggestion list just got a hell of a lot smarter.
 * Stack text settings are now set by group.

===v4.2.1.2===
 * Fixed: meta.lua line 80: bad argument #1 to 'tinsert' (table expected, got nil)

===v4.2.1.1===
 * Fixed a bug that was breaking meta icons until config mode was toggled on and off at least once after logging in.
 
===v4.2.1===
 * Unit cooldowns can now be sorted by duration.
 * Buffs/debuffs that are being sorted by duration now do so across all units that are being checked instead of only within each unit.
 * Internal Cooldown icons now have the option to not reset their cooldown to full duration if they are triggered while cooling down (mainly for the Early Frost mage talent).
 * Updated COMBAT_LOG_EVENT_UNFILTERED for 4.2.
 * When right-click-dragging icons to move them or swap them, any meta icons or icon shown conditions will now update to reflect that change.
 * Further categorized the ever-expanding condition type dropdown.
 * Some conditions that check a duration now allow a smaller increment of time to be specified.
 * Some conditions that had high maximum values now adjust their min/max based on the current value, allowing finer tuning with a higher (infinite) maximum.
 * Many icon types had their CPU efficiency increased.
 * Added the following text output destinations:
 ** Grayhoof's Scrolling Combat Text
 ** mikord's MikScrollingBattleText
 ** ckknight's Parrot
 * New Conditions:
 ** Buff/Debuff - Number of - This conditions tracks the number of a buff or debuff that are active on a unit. This is not the number of stacks, but rather the actual number of auras (3 warlocks in your raid cast 3 corruptions, etc.).
 * Bug fixes:
 ** The "On Show" icon event should no longer erroneously trigger sometimes when changing zones.