@@ -119,7 +119,7 @@ local function DR_OnEvent(icon, _, _, p, ...)
 		if t == "DEBUFF" then
 			local ND = icon.NameDictionary
 			if ND[i] or ND[strlowerCache[n]] then
-				if PvEDRs[i] or (bitband(f, CL_PLAYER) == CL_PLAYER or bitband(f, CL_PET) == CL_PET) then
+				if PvEDRs[i] or bitband(f, CL_PLAYER) == CL_PLAYER or bitband(f, CL_PET) == CL_PET then
 					local dr = icon[g]
 					if not dr then
 						dr = {
