@@ -2,6 +2,9 @@
  * New icon type: Diminishing Returns. Guess what this one tracks?
  * The suggestion list just got a hell of a lot smarter.
  * Stack text settings are now set by group.
+ * Bug Fixes:
+ ** (r99) buff.lua:87 attempt to perform arithmetic on upvalue 'UPD_INTV' (a nil value) //Not reproduced, but the fix should work//
+ ** (r99) TellMeWhen.lua:1039 bad argument #1 to 'pairs' (table expected, got nil)
 
 ===v4.2.1.2===
  * Fixed: meta.lua line 80: bad argument #1 to 'tinsert' (table expected, got nil)
